--- a/.travis.yml
+++ b/.travis.yml
@@ -5,10 +5,19 @@ env:
 before_install:
 - travis_retry sudo apt-add-repository -y ppa:dhart/ppa
 - travis_retry sudo apt-get update -qq
-- travis_retry sudo apt-get install -qq libgmp3-dev antlr3 libantlr3c-dev libboost-dev libboost-thread-dev swig2.0 libcln-dev cxxtest openjdk-7-jdk rpm devscripts doxygen graphviz
+- travis_retry sudo apt-get install -qq libgmp3-dev antlr3 libantlr3c-dev libboost-dev
+  libboost-thread-dev swig2.0 libcln-dev cxxtest openjdk-7-jdk rpm devscripts doxygen
+  graphviz
 - travis_retry git clone -b 1.4 git://github.com/CVC4/CVC4.git cvc4
 script: |
-   gcc -Wall -o hello hello.c
-   mv hello SOURCES/.
-   mv hello.spec SPECS/.
-   rpmbuild --define '_topdir '`pwd` --define 'BUILD_NUMBER '%{build} -ba SPECS/hello.spec
+  rm -f hello
+  gcc -Wall -o hello hello.c
+  mv hello SOURCES/.
+  mv hello.spec SPECS/.
+  rpmbuild --define '_topdir '`pwd` --define 'BUILD_NUMBER '%{build} -ba SPECS/hello.spec
+deploy:
+  provider: packagecloud
+  username: jasper9
+  token:
+    secure: bo/uh50LjBK68CLuKex/cOYytvoXRTx71oy/I114J0vM2EQqA3KqdekQ3rY3ZQm1V6UO8voHg/OL/lkf1T7MkPgdOZsTpg09iZVBVT1U+DRqNPwtj4e4be0oC35oJzXGwuFnMRiV62rw9chBV5sBWEelnTKQwRGoild2pMRHw4o=
+  branch: code-stream
