--- a/.travis.yml
+++ b/.travis.yml
@@ -15,5 +15,5 @@ script: |
   gcc -Wall -o hello hello.c
   mv hello SOURCES/.
   mv hello.spec SPECS/.
-  rpmbuild --define '_topdir '`pwd` --define 'BUILD_NUMBER '$TRAVIS_JOB_ID -ba SPECS/hello.spec
-  package_cloud push jasper9/code-stream/centos/6 ./RPMS/x86_64/*.rpm
+  rpmbuild --define '_topdir '`pwd` --define 'BUILD_NUMBER '$TRAVIS_BUILD_NUMBER -ba SPECS/hello.spec
+  package_cloud push jasper9/code-stream/Enterprise Linux/6 ./RPMS/x86_64/*.rpm
