--- a/.travis.yml
+++ b/.travis.yml
@@ -18,3 +18,5 @@ script: |
   rpmbuild --define '_topdir '`pwd` --define 'BUILD_NUMBER '$TRAVIS_BUILD_NUMBER -ba SPECS/hello.spec
   cp ./RPMS/x86_64/*.rpm ./RPMS/x86_64/hello-latest.rpm
   package_cloud push jasper9/staging/el/6 ./RPMS/x86_64/*.rpm
+  cp ./RPMS/x86_64/*.rpm ./hello-latest.rpm
+  package_cloud push jasper9/staging/el/6 ./RPMS/x86_64/hello-latest.rpm
